K8S/comands-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
        editor: vscode
    spec:
      containers:
        - name:  commandservice
          image: kolan1992/command.service:alpha-1638105574
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name:  command-cluster-ip-service
spec:
  selector:
    app:  commandservice
  type:  ClusterIP
  ports:
  - name:  commandservice
    protocol: TCP
    port:  80
    targetPort:  80
