K8S/platform-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
        editor: vscode
    spec:
      containers:
        - name:  platformservice
          image: kolan1992/platform.api:alpha-1636576523
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name:  platform-cluster-ip-service
spec:
  selector:
    app:  platformservice
  type:  ClusterIP
  ports:
  - name:  platformservice
    protocol: TCP
    port:  80
    targetPort:  80
