K8S/platform-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  platform-node-port-service
spec:
  type:  NodePort
  selector:
    app:  platformservice
  ports:
  - name:  platformservice
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000
