K8S/ingress-service.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api-gateway
  labels:
    name: api-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "true"
spec:
  rules:
  - host: kube.demo
    http:
      paths:
      - pathType: Prefix
        path: /platform-service(/|$)(.*)
        backend:
          service:
            name: platform-cluster-ip-service
            port: 
              number: 80
      - pathType: Prefix
        path: /command-service(/|$)(.*)
        backend:
          service:
            name:  command-cluster-ip-service
            port: 
              number: 80
